cmake_minimum_required(VERSION 3.25)
project(Clang)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clang
        64132992.cpp
        BTThucHanh4.cpp
        capphatdong.cpp
        ChuanHoaChuoi.cpp
        chuoi.cpp
        ChuoiKyTu.cpp
        fcfs.cpp
        FIBO.cpp
        h3.cpp
        hdh_1.cpp
        hdh_2.cpp
        hello.cpp
        hr.cpp
        ltuh1.cpp
        LUTH.cpp
        nhan.c
        OnTap.cpp
        OnTap_2.cpp
        p_an.cpp
        priority_non_preemtive.cpp
        round_robin.cpp
        songuyento.cpp
        tempCodeRunnerFile.cpp
        test.c
        test.cpp
        test2.cpp
        test20.cpp
        test21.cpp
        test22.cpp
        test25.cpp
        test4.cpp
        test40.cpp
        Test41.cpp
        test5.cpp
        test6.cpp
        test8.cpp
        test_2.cpp
        test_3.cpp
        test_struct.cpp
        tets.cpp
        texe2.cpp
        text.cpp
        tong.cpp
        Tuan12_OnTap.cpp
        Tuan12_OnTap_2.cpp
        tuan5.cpp
        Tuan6_Bai1.cpp
        Tuan7_Bai1.cpp
        Tuan8.cpp
        tuan8_Bai1.cpp
        tuan9_bai1.cpp
        tuan9_bai2.cpp
        TuDaiNhat.cpp
        Untitled-1.c)
